# python-skillup

./: main.py  pyproject.toml  readme.md  shopyoo.db
code/: dict_set.py  frameworks.txt  fruit_basket.py  ice_cream.py  lists_1.py  oop_fruit.py  topics.txt  video_game.py
code/icecream_shop/: items.py  main.py  python.txt  shop.py
shop/: __init__.py  authentication.py  cart.py  exceptions.py  inventory.py  models.py  order.py
shop/commands/: cart.py  inventory.py  order.py  users.py
shop/services/: authentication.py  cart.py  inventory.py  order.py
